[package]
name = "codecrafters-shell"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.91"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
regex = "1.12.3"
rustix = { version = "1.1.3", features = ["fs", "process"] }
thiserror = "1.0.38"                             # error handling
